// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> renders a button with the children alongwith a loding spinner when loading=true is given 1`] = `
<button
  class="inline-flex items-center rounded-md disabled:cursor-not-allowed bg-yellow-600 disabled:bg-yellow-600/50 text-white outline-none focus:ring-4 focus:ring-yellow-500/50 transition-all px-4 py-2 text-base"
  data-testid="button"
  disabled=""
>
  <svg
    class="animate-spin w-5 h-5 -ml-1.5 mr-2"
    fill="none"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      class="opacity-25"
      cx="12"
      cy="12"
      r="10"
      stroke="currentColor"
      stroke-width="4"
    />
    <path
      class="opacity-75"
      d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"
      fill="currentColor"
    />
  </svg>
  Click me
</button>
`;

exports[`<Button> renders a medium button by default 1`] = `
<button
  class="inline-flex items-center rounded-md disabled:cursor-not-allowed bg-yellow-600 disabled:bg-yellow-600/50 text-white outline-none focus:ring-4 focus:ring-yellow-500/50 transition-all px-4 py-2 text-base"
  data-testid="button"
>
  Click me
</button>
`;

exports[`<Button> renders a small button when size="sm" is given 1`] = `
<button
  class="inline-flex items-center rounded-md disabled:cursor-not-allowed bg-yellow-600 disabled:bg-yellow-600/50 text-white outline-none focus:ring-4 focus:ring-yellow-500/50 transition-all px-3 py-1.5 text-base"
  data-testid="button"
>
  Click me
</button>
`;

exports[`<Button> renders a translucent button when transulucent=true is given 1`] = `
<button
  class="inline-flex items-center rounded-md disabled:cursor-not-allowed bg-yellow-600/20 hover:bg-yellow-600/30 disabled:bg-yellow-600/10 text-yellow-600 outline-none focus:ring-4 focus:ring-yellow-500/50 transition-all px-4 py-2 text-base"
  data-testid="button"
>
  Click me
</button>
`;

exports[`<Button> renders an extra small button when size="xs" is given 1`] = `
<button
  class="inline-flex items-center rounded-md disabled:cursor-not-allowed bg-yellow-600 disabled:bg-yellow-600/50 text-white outline-none focus:ring-4 focus:ring-yellow-500/50 transition-all px-2 py-1 text-sm"
  data-testid="button"
>
  Click me
</button>
`;
